--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body {
   padding: 1.563vw;
 }
 
+.meta {
+  background-color: rgba(0, 0, 0, 0.1294117647);
+  margin-bottom: 3.125vw;
+}
+
 .logo {
   font-weight: 800;
   font-size: 1.823vw;
@@ -100,4 +105,30 @@ h1 {
   border: 1px solid #d6d5d3;
   font-family: monospace;
   border-radius: 0.521vw;
+}
+
+.reset-btn {
+  background-color: rgba(231, 194, 187, 0.7803921569);
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  font-size: 5.2083333333vw;
+  margin-bottom: 4.1666666667vw;
+}
+.reset-btn:hover {
+  cursor: pointer;
+}
+
+.css-none {
+  width: 67.7083333333vw;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.1294117647);
+}
+
+.show {
+  display: block;
+}
+
+.bold {
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
