--- a/style.scss
+++ b/style.scss
@@ -123,6 +123,10 @@ h1 {
     border-radius: 0.521vw;
 }
 
+// .rainbow {
+//     width: 65.625vw;
+// }
+
 .reset-btn {
     background-color: #e7c2bbc7;
     width:min-content;
@@ -141,4 +145,8 @@ h1 {
 
 .show {
     display: block;
+}
+
+.bold {
+    font-weight: bold;
 }
