--- a/style.scss
+++ b/style.scss
@@ -150,3 +150,18 @@ h1 {
 .bold {
     font-weight: bold;
 }
+
+.js-tasks {
+    background-color: #e7c2bbc7;
+    width:vw(300px);
+    height: vw(18px);
+    margin-top: vw(80px);
+    margin-bottom: vw(50px);
+    padding-left: vw(5px);
+}
+
+.for-tasks {
+    background-color: #d6d5d3;
+    font-family: monospace;
+
+}
