--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ body {
 .nav {
     // top: 0;
     // width: 100vw;
-    font-size: vw(30px);
+    font-size: vw(40px);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -57,7 +57,9 @@ body {
 
 .nav-list {
     position: fixed;
-    right: vw(30px);
+    top: 0;
+    padding: vw(20px) vw(20px);
+    right: 0;
     display: flex;
     gap: 1.250vw;
     z-index: 3;
@@ -150,9 +152,11 @@ h1 {
     background-color: #00000021;
 }
 
-.show {
+.show,
+.css-block {
     display: block;
 }
+
 
 .bold {
     font-weight: bold;
@@ -184,3 +188,9 @@ h1 {
     font-size: vw(50px);
     font-weight: bold;
 }
+
+.gif {
+    position: absolute;
+    width: vw(300px);
+}
+
